# vpype-penset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: generate_images.sh
src/vpype_penset/: __init__.py  penset.py  pipeline.py
src/vpype_penset/commands/: __init__.py  colorize.py  penexport_cmd.py  peninfo_cmd.py  penset_cmd.py  pensets_cmd.py  penswatch_cmd.py
tests/: test_commands.py  test_penset.py
